--- a/src/River.Socks/River.Socks.csproj
+++ b/src/River.Socks/River.Socks.csproj
@@ -47,8 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Socks4ClientStream.cs" />
     <Compile Include="Socks5ClientStream.cs" />
+    <Compile Include="Socks4ClientStream.cs" />
     <Compile Include="SocksClientStream.cs" />
     <Compile Include="SocksError.cs" />
     <Compile Include="SocksHandler.cs" />
@@ -69,6 +69,9 @@
       <Version>2.9.8</Version>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="System.Buffers">
+      <Version>4.6.0</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
